@@ -41,6 +41,12 @@
           <artifactId>slf4j-api</artifactId>
           <version>2.0.17</version>
       </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.30</version>
+          <scope>provided</scope>
+      </dependency>
 
   </dependencies>
     <build>
@@ -53,6 +59,13 @@
                     <configuration>
                         <source>17</source>
                         <target>17</target>
+                        <fork>true</fork>
+                        <compilerArgs>
+                            <arg>--add-opens</arg>
+                            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                            <arg>--add-opens</arg>
+                            <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
